Fixed individual recipe layout bug, moved print button to align with rest of page, dropdown now shows the same active as inactive

--- a/src/components/IndividualRecipe/IndividualRecipeLayout/ComponentToPrint/ComponentToPrint.scss
+++ b/src/components/IndividualRecipe/IndividualRecipeLayout/ComponentToPrint/ComponentToPrint.scss
@@ -36,7 +36,7 @@
   button {
     float: right;
     margin-top: -40px;
-    margin-right: 20px;
+    margin-right: 0px;
     display: block;
     color: c.$dark-sienna;
     font-family: Coolvetica;
