--- a/src/components/IndividualRecipe/IndividualRecipeLayout/IndividualRecipeLayout.scss
+++ b/src/components/IndividualRecipe/IndividualRecipeLayout/IndividualRecipeLayout.scss
@@ -12,7 +12,7 @@
     h1 {
       font-size: 25px;
       text-align: center;
-      margin-top: 0px;
+      margin-bottom: 25px;
       color: c.$anti-flash-white;
     }
 
@@ -26,6 +26,7 @@
 
     img {
       margin-left: 110px;
+      margin-bottom: 10px;
       width: 300px;
       height: 300px;
       border-radius: 20px;
@@ -37,10 +38,10 @@
     float: right;
     display: grid;
     margin-top: 10px;
-    margin-right: 20px;
-    letter-spacing: 0.4px;
+    margin-right: 0px;
+    letter-spacing: 0.3px;
     padding: 10px;
-    width: 610px;
+    width: 640px;
     border: 2px solid black;
     border-radius: 5px;
     grid-template-columns: repeat(5, 122px);
@@ -48,7 +49,7 @@
     color: c.$dark-sienna;
     font-family: Coolvetica;
     font-weight: 400;
-    font-size: 13px;
+    font-size: 12px;
   }
 
   .Instructions {
@@ -58,7 +59,7 @@
     margin-left: 10px;
     letter-spacing: 0.8px;
     padding: 30px;
-    width: 92%;
+    width: 100%;
     border: 2px solid black;
     border-radius: 5px;
     background-color: c.$grullo;
